# etf-holdings-tracker

./: .gitignore  00981A_Holdings_20251231.xlsx  main.py  pyproject.toml
.github/workflows/: daily_scrape.yml
data/: 00980A_Holdings_20260107.csv  00980A_Holdings_20260108.csv  00980A_Holdings_20260109.csv  00980A_Holdings_20260112.csv  00980A_Holdings_20260113.csv  00980A_Holdings_20260114.csv  00980A_Holdings_20260115.csv  00980A_Holdings_20260116.csv  00980A_Holdings_20260119.csv  00980A_Holdings_20260120.csv  00980A_Holdings_20260121.csv  00980A_Holdings_20260122.csv  00980A_Holdings_20260123.csv  00980A_Holdings_20260126.csv  00980A_Holdings_20260127.csv  00980A_Holdings_20260128.csv  00980A_Holdings_20260129.csv  00980A_Holdings_20260130.csv  00980A_Holdings_20260202.csv  00980A_Holdings_20260203.csv  00980A_Holdings_20260204.csv  00980A_Holdings_20260205.csv  00980A_Holdings_20260209.csv  00980A_Holdings_20260210.csv  00980A_Holdings_20260211.csv  00980A_Holdings_20260223.csv  00980A_Holdings_20260224.csv  00980A_Holdings_20260225.csv  00980A_Holdings_20260226.csv  00980A_Holdings_20260302.csv  00980A_Holdings_20260303.csv  00980A_Holdings_20260304.csv  00980A_Holdings_20260305.csv  00980A_Holdings_20260306.csv  00980A_Holdings_20260309.csv  00980A_Holdings_20260310.csv  00980A_Holdings_20260311.csv  00980A_Holdings_20260312.csv  00980A_Holdings_20260313.csv  00980A_Holdings_20260316.csv  (+713 more)
