[project]
name = "stock-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "selenium>=4.39.0",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
    "yfinance>=1.0",
]
